@@ -54,6 +54,8 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - ``gui.View``: ``visible`` and ``active`` can now be functions that return a boolean
 - ``widgets.Panel``: new attributes to control window dragging and resizing with mouse or keyboard
 - ``widgets.Window``: Panel subclass with attributes preset for top-level windows
+- ``widgets.CycleHotkeyLabel``: now supports rendering option labels in the color of your choice
+- ``widgets.ToggleHotkeyLabel``: now renders the ``On`` option in green text
 - `overlay`: ``OverlayWidget`` now inherits from ``Panel`` instead of ``Widget`` to get all the frame and mouse integration goodies
 - ``dfhack.gui.getDFViewscreen()``: returns the topmost underlying DF viewscreen
 
